# opendart-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: IMPLEMENTATION_DEPLOYMENT_KO.md  KAKAO_PLAYMCP_OPERATIONS_KO.md
src/opendart_mcp/: __init__.py  client.py  normalization.py  routing.py  server.py  specialists.py
tests/: test_client.py  test_normalization.py  test_routing.py  test_server.py  test_specialists.py
