[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "opendart-mcp"
version = "1.2.1"
description = "A small, public-ready MCP server for Korea's OpenDART disclosure data."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastmcp==2.14.5",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "ruff==0.14.10",
]

[project.scripts]
opendart-mcp = "opendart_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opendart_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
